fix horizontal scrolling on about page

--- a/styles/style.css
+++ b/styles/style.css
@@ -185,6 +185,7 @@ footer .contact-box p {
   .content-container {
     text-align: center;
     padding: 0;
+    overflow-x: hidden;
   }
 
   nav a {
